Changed main strap line

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <span class="dot"></span>
         Live — streaming retail data in production
     </div>
-    <h1>Config-driven ETL<br>for <em>retail data</em></h1>
+    <h1>The Real-Time Data Backbone for Modern Retail<br>for <em>modern retail</em></h1>
     <p class="hero-sub">Ingest POS, inventory, products, and store data from flat files and APIs. Normalise into events. Stream to Kafka, Event Hubs, or JSONL. Monitor everything in real-time.</p>
     <div class="hero-actions">
         <a href="#contact" class="btn btn-e btn-lg">Book a Demo →</a>
