--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         Live — streaming data in production
     </div>
     <h1>Real-Time Data for<br><em>Retail & Distributed Enterprise</em></h1>
-    <p class="hero-sub">Config-driven ETL that ingests files and APIs, normalises into events, and streams to Kafka or JSONL. Deployed at the edge, monitored from the cloud. Licensed, tracked, and always visible.</p>
+    <p class="hero-sub">Config-driven ETL that ingests files and APIs, normalises into events, and streams to Kafka or JSONL. From edge devices to enterprise — deployed anywhere, monitored from the cloud.</p>
     <div class="hero-actions">
         <a href="#contact" class="btn btn-e btn-lg">Book a Demo →</a>
         <a href="#how-it-works" class="btn btn-o btn-lg">See How It Works</a>
@@ -320,7 +320,7 @@
             <div class="how-card rv">
                 <div class="how-num n1">1</div>
                 <h3>Configure &amp; Deploy</h3>
-                <p>Define schemas in JSON configs — field mappings, validation, derived fields. Deploy the integration layer on-prem, in the cloud, or at the edge. Set a license key and controller URL.</p>
+                <p>Define schemas in JSON configs — field mappings, validation, derived fields. Deploy the integration layer on-prem, in the cloud, or on edge devices. Set a license key and controller URL.</p>
                 <code>{
   "schema": "planning_application",
   "delimiter": ",",
@@ -591,7 +591,7 @@
 <!-- PRICING -->
 <section id="pricing">
     <div class="wrap tc">
-        <div class="tag rv">Pricing coming soon</div>
+        <div class="tag rv">Pricing</div>
         <div class="stitle rv">Start simple. Scale when ready.</div>
         <p class="sdesc c rv">From a single scheduled data feed to enterprise-wide real-time streaming. No hidden fees.</p>
 
@@ -600,8 +600,8 @@
                 <div class="pc-tier">Starter</div>
                 <div class="pc-name">Connect</div>
                 <p class="pc-desc">One schema, one pipeline. File watch or API ingestion for a single data feed.</p>
-                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">500</span></div>-
-                <div class="pc-per">per month</div>-->
+                <div class="pc-amt"><span class="cur">£</span><span class="val">500</span></div>
+                <div class="pc-per">per month</div>
                 <ul class="pc-list">
                     <li>1 schema config</li>
                     <li>File watch or REST API</li>
@@ -623,8 +623,8 @@
                 <div class="pc-tier">Growth</div>
                 <div class="pc-name">Launch</div>
                 <p class="pc-desc">Multi-schema ingestion with Kafka streaming for growing operations.</p>
-                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">2,500</span></div>
-                <div class="pc-per">per month · billed annually</div>-->
+                <div class="pc-amt"><span class="cur">£</span><span class="val">2,500</span></div>
+                <div class="pc-per">per month · billed annually</div>
                 <ul class="pc-list">
                     <li>Up to 3 schema configs</li>
                     <li>File watch + REST API</li>
@@ -647,8 +647,8 @@
                 <div class="pc-tier">Professional</div>
                 <div class="pc-name">Scale</div>
                 <p class="pc-desc">Full data pipeline with all schemas, Event Hubs, and priority support.</p>
-                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">5,000</span></div>
-                <div class="pc-per">per month · billed annually</div>-->
+                <div class="pc-amt"><span class="cur">£</span><span class="val">5,000</span></div>
+                <div class="pc-per">per month · billed annually</div>
                 <ul class="pc-list">
                     <li>Unlimited schema configs</li>
                     <li>All ingestion modes</li>
@@ -673,8 +673,8 @@
                 <div class="pc-tier">Enterprise</div>
                 <div class="pc-name">Transform</div>
                 <p class="pc-desc">Unlimited scale, private deployment, custom schemas, and dedicated support.</p>
-                <!--<div class="pc-amt"><span class="val" style="font-size:2rem">Custom</span></div>
-                <div class="pc-per">tailored to your infrastructure</div>-->
+                <div class="pc-amt"><span class="val" style="font-size:2rem">Custom</span></div>
+                <div class="pc-per">tailored to your infrastructure</div>
                 <ul class="pc-list">
                     <li>Unlimited everything</li>
                     <li>On-prem / private cloud</li>
@@ -733,7 +733,7 @@
         <div class="ucgrid">
             <div class="uc rv">
                 <div class="uc-tag">Retail</div>
-                <h3>POS Data Pipeline — Multiple Stores</h3>
+                <h3>POS Data Pipeline — 60+ Stores</h3>
                 <p>Caribbean retail group streaming POS transaction lines from pipe-delimited files into Kafka for real-time inventory sync. Replaced nightly batch with file watcher + event streaming.</p>
                 <div class="uc-met">
                     <strong>12hrs → Real-time</strong>
@@ -749,7 +749,7 @@
                     <span>vs £2k/mo custom dev</span>
                 </div>
             </div>
-            <!--<div class="uc rv">
+            <div class="uc rv">
                 <div class="uc-tag">Supply Chain</div>
                 <h3>Shipment &amp; Inventory Consolidation</h3>
                 <p>Multi-source inventory and shipment data normalised into consistent events. File watch ingestion with derived calculations streamed to analytics and downstream services.</p>
@@ -757,7 +757,7 @@
                     <strong>8</strong>
                     <span>schema types and growing</span>
                 </div>
-            </div>-->
+            </div>
             <div class="uc rv">
                 <div class="uc-tag">Platform Integration</div>
                 <h3>Master Data Sync via REST API</h3>
