--- a/index.html
+++ b/index.html
@@ -844,6 +844,7 @@ decision date. Stream to Kafka."
 
 <!-- CTA -->
 <section id="contact" class="cta">
+    <p style="font-size:0.82rem;color:var(--text-3);font-style:italic;margin-bottom:0.5rem" class="rv">Conduo — Latin: "to bring together." From <em>con-</em> (together) + <em>dūcō</em> (to lead).</p>
     <div class="stitle rv">Ready to bring your<br>data <em style="font-family:var(--display);background:linear-gradient(135deg,var(--em2),var(--cyan));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text">together?</em></div>
     <p class="rv">30-minute demo. We'll run your data through Conduo live and show you events streaming in real-time.</p>
     <div class="hero-actions rv">
@@ -856,7 +857,11 @@ decision date. Stream to Kafka."
 <footer class="foot">
     <div class="foot-l">
         <div class="fb">conduo.ai</div>
-        <p>© 2026 Conduo · A Resolutis product</p>
+        <div style="display:flex;align-items:center;gap:0.5rem;margin-top:0.3rem">
+            <img src="resolutis-logo-inverted_grey.png" alt="Resolutis" style="height:14px">
+            <p style="font-size:0.75rem;color:var(--text-4)">Conduo by Resolutis</p>
+        </div>
+        <p style="font-size:0.68rem;color:var(--text-4);margin-top:0.3rem">© 2026 Resolutis Ltd. All rights reserved.</p>
     </div>
     <div class="foot-r">
         <a href="#features">Features</a>
