--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ decision date. Stream to Kafka."
     <div class="foot-l">
         <div class="fb">conduo.ai</div>
         <div style="display:flex;align-items:center;gap:0.5rem;margin-top:0.3rem">
-            <img src="resolutis-logo-inverted_grey.png" alt="Resolutis" style="height:24px">
+            <a href="https://resolutis.com"><img src="resolutis-logo-inverted_grey.png" alt="Resolutis" style="height:24px"></a>
             <p style="font-size:0.75rem;color:var(--text-4)">Conduo by Resolutis</p>
         </div>
         <p style="font-size:0.68rem;color:var(--text-4);margin-top:0.3rem">© 2026 Resolutis Ltd. All rights reserved.</p>
