--- a/index.html
+++ b/index.html
@@ -848,8 +848,8 @@ decision date. Stream to Kafka."
     <div class="stitle rv">Ready to bring your<br>data <em style="font-family:var(--display);background:linear-gradient(135deg,var(--em2),var(--cyan));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text">together?</em></div>
     <p class="rv">30-minute demo. We'll run your data through Conduo live and show you events streaming in real-time.</p>
     <div class="hero-actions rv">
-        <a href="mailto:hello@conduo.ai" class="btn btn-e btn-lg">Book a Demo →</a>
-        <a href="mailto:hello@conduo.ai" class="btn btn-o btn-lg">hello@conduo.ai</a>
+        <a href="https://resolutis.com/contact/" class="btn btn-e btn-lg">Book a Demo →</a>
+        <a href="https://resolutis.com/contact/" class="btn btn-o btn-lg email-ob">Contact →</a>
     </div>
 </section>
 
