Removed text that is not needed

--- a/index.html
+++ b/index.html
@@ -305,7 +305,6 @@
     <div class="proof-logos">
         <span>Impulse Logic</span>
         <span>The Modern Builder</span>
-        <span>Massy Stores</span>
     </div>
 </div>
 
@@ -448,7 +447,7 @@
                     </thead>
                     <tbody>
                         <tr style="border-bottom:1px solid var(--border)">
-                            <td style="padding:0.55rem 0.75rem;color:var(--text)">massy-pos-prod</td>
+                            <td style="padding:0.55rem 0.75rem;color:var(--text)">pos-prod</td>
                             <td style="padding:0.55rem 0.75rem"><span style="color:var(--em)">● up</span></td>
                             <td style="padding:0.55rem 0.75rem;color:var(--text-2)">scale-001</td>
                             <td style="padding:0.55rem 0.75rem;color:var(--em)">2,847</td>
@@ -464,7 +463,7 @@
                             <td style="padding:0.55rem 0.75rem;color:var(--text-3)">18s ago</td>
                         </tr>
                         <tr style="border-bottom:1px solid var(--border)">
-                            <td style="padding:0.55rem 0.75rem;color:var(--text)">massy-boh-staging</td>
+                            <td style="padding:0.55rem 0.75rem;color:var(--text)">boh-staging</td>
                             <td style="padding:0.55rem 0.75rem"><span style="color:var(--amber)">● stale</span></td>
                             <td style="padding:0.55rem 0.75rem;color:var(--text-2)">scale-001</td>
                             <td style="padding:0.55rem 0.75rem;color:var(--text-3)">0</td>
