--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 <!-- PRICING -->
 <section id="pricing">
     <div class="wrap tc">
-        <div class="tag rv">Pricing</div>
+        <div class="tag rv">Pricing Coming Soon</div>
         <div class="stitle rv">Start simple. Scale when ready.</div>
         <p class="sdesc c rv">From a single scheduled data feed to enterprise-wide real-time streaming. No hidden fees.</p>
 
@@ -599,8 +599,8 @@
                 <div class="pc-tier">Starter</div>
                 <div class="pc-name">Connect</div>
                 <p class="pc-desc">One schema, one pipeline. File watch or API ingestion for a single data feed.</p>
-                <div class="pc-amt"><span class="cur">£</span><span class="val">500</span></div>
-                <div class="pc-per">per month</div>
+                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">500</span></div>
+                <div class="pc-per">per month</div>-->
                 <ul class="pc-list">
                     <li>1 schema config</li>
                     <li>File watch or REST API</li>
@@ -622,8 +622,8 @@
                 <div class="pc-tier">Growth</div>
                 <div class="pc-name">Launch</div>
                 <p class="pc-desc">Multi-schema ingestion with Kafka streaming for growing operations.</p>
-                <div class="pc-amt"><span class="cur">£</span><span class="val">2,500</span></div>
-                <div class="pc-per">per month · billed annually</div>
+                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">2,500</span></div>
+                <div class="pc-per">per month · billed annually</div>-->
                 <ul class="pc-list">
                     <li>Up to 3 schema configs</li>
                     <li>File watch + REST API</li>
@@ -646,8 +646,8 @@
                 <div class="pc-tier">Professional</div>
                 <div class="pc-name">Scale</div>
                 <p class="pc-desc">Full data pipeline with all schemas, Event Hubs, and priority support.</p>
-                <div class="pc-amt"><span class="cur">£</span><span class="val">5,000</span></div>
-                <div class="pc-per">per month · billed annually</div>
+                <!--<div class="pc-amt"><span class="cur">£</span><span class="val">5,000</span></div>
+                <div class="pc-per">per month · billed annually</div>-->
                 <ul class="pc-list">
                     <li>Unlimited schema configs</li>
                     <li>All ingestion modes</li>
@@ -672,8 +672,8 @@
                 <div class="pc-tier">Enterprise</div>
                 <div class="pc-name">Transform</div>
                 <p class="pc-desc">Unlimited scale, private deployment, custom schemas, and dedicated support.</p>
-                <div class="pc-amt"><span class="val" style="font-size:2rem">Custom</span></div>
-                <div class="pc-per">tailored to your infrastructure</div>
+                <!--<div class="pc-amt"><span class="val" style="font-size:2rem">Custom</span></div>
+                <div class="pc-per">tailored to your infrastructure</div>-->
                 <ul class="pc-list">
                     <li>Unlimited everything</li>
                     <li>On-prem / private cloud</li>
