Removed a proven in production

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
         <div class="ucgrid">
             <div class="uc rv">
                 <div class="uc-tag">Retail</div>
-                <h3>POS Data Pipeline — 60+ Stores</h3>
+                <h3>POS Data Pipeline — Multiple Stores</h3>
                 <p>Caribbean retail group streaming POS transaction lines from pipe-delimited files into Kafka for real-time inventory sync. Replaced nightly batch with file watcher + event streaming.</p>
                 <div class="uc-met">
                     <strong>12hrs → Real-time</strong>
@@ -746,15 +746,6 @@
                 <div class="uc-met">
                     <strong>£500/mo</strong>
                     <span>vs £2k/mo custom dev</span>
-                </div>
-            </div>
-            <div class="uc rv">
-                <div class="uc-tag">Supply Chain</div>
-                <h3>Shipment &amp; Inventory Consolidation</h3>
-                <p>Multi-source inventory and shipment data normalised into consistent events. File watch ingestion with derived calculations streamed to analytics and downstream services.</p>
-                <div class="uc-met">
-                    <strong>8</strong>
-                    <span>schema types and growing</span>
                 </div>
             </div>
             <div class="uc rv">
